Fixes and such.
Idk why but all the pages had the index.html content. Thank god for github. Also added QoL 'back to top' links to longer pages.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Laura Ukrainec's online portfolio">
     <meta name="author" content="Laura Ukrainec">
-    <title>Laura Ukrainec | Home</title>
+    <title>Laura Ukrainec | About</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex" href="home.html">
+            <a class="logo flex" href="index.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -37,8 +37,8 @@
             <!-- Menu -->
             <nav>
                 <ul class="main-menu">
-                    <li><a class="current" href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="current" href="about.html">About</a></li>
                     <li class="top-level">
                         <a href="portfolio.html">Portfolio
                         <!-- Dropdown Arrow -->
@@ -66,72 +66,118 @@
             </nav>
         </div>
     </header>
-    <main class="home container">
-        <!-- Hello -->
-        <section>
-            <h2>Hello!</h2>
+    <main class="about container">
+        <h2>About</h2>
+        <div class="quote">
+            <div class="decoration"></div>
             <div>
-                <div>
-                    <p>
-                        I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting blueprints.
-                    </p>
-                    <p>
-                        I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.
-                    </p>
-                </div>
-                <a class="flex btn" href="about.html">Learn More
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
-                </a>
+                <q><i>I'm currently learning everything I can about game programming so I can help turn imaginations into reality.</i></q>
             </div>
-        </section>
-        <div class="divider"></div>
-        <!-- What I Can Do -->
-        <section>
-            <h2>What I can do.</h2>
+            <div class="decoration"></div>
+        </div>
+        <div class="info">
+            <!-- Col 1 -->
             <div>
-                <div>
-                    <p>
-                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
-                    </p>
-                    <p>
-                        I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
-                    </p>
-                    <p>
-                        I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.
-                    </p>
-                </div>
-                <a class="flex btn" href="portfolio.html">Portfolio
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
-                </a>
+                <!-- Basics -->
+                <section>
+                    <h3 class="lined">Basics</h3>
+                    <div class="tiles">
+                        <div class="tile">
+                            <h3 class="tile-title">Languages</h3>
+                            <div class="content flex">
+                                <!-- C# -->
+                                <img src="img/csharp-logo.svg" alt="C Sharp logo">
+                                <!-- Javascript -->
+                                <img src="img/javascript-logo.svg" alt="Javascript logo">
+                                <!-- HTML5 -->
+                                <img src="img/html5-logo.svg" alt="HTML5 logo">
+                                <!-- CSS3 -->
+                                <img src="img/css-logo.svg" alt="CSS3 logo">
+                                <!-- Sass -->
+                                <img src="img/sass-logo.svg" alt="Sass logo">
+                                <!-- Microsoft SQL -->
+                                <img src="img/microsft-sql-logo.svg" alt="Microsoft SQL logo">
+                                <!-- Unreal Blueprints -->
+                                <img src="img/unreal-bp-logo.webp" alt="Unreal Engine blueprints logo">
+                            </div>
+                        </div>
+                        <div class="tile">
+                            <h3 class="tile-title">Programs</h3>
+                            <div class="content flex">
+                                <!-- Unity -->
+                                <img src="img/unity-logo.svg" alt="Unity logo">
+                                <!-- Unreal Engine -->
+                                <img src="img/unreal4-logo.webp" alt="Unreal Engine 4 logo">
+                                <!-- Monogame -->
+                                <img src="img/monogame-logo.webp" alt="Monogame logo">
+                                <!-- Visual Studio -->
+                                <img src="img/visual-studio-logo.svg" alt="Visual Studio logo">
+                                <!-- Visual Studio Code -->
+                                <img src="img/visual-studio-code-logo.svg" alt="Visual Studio Code logo">
+                                <!-- Adobe Photoshop -->
+                                <img src="img/adobe-photoshop-logo.svg" alt="Photoshop logo">
+                                <!-- GIMP -->
+                                <img src="img/gimp-logo.svg" alt="GIMP logo">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Resume -->
+                <section>
+                    <h3 class="lined">Resume</h3>
+                    <div class="resume-link">
+                        <a href="docs/LauraUkrainec-Resume.docx" download="LauraUkrainec-Resume">
+                            <img src="img/microsoft-word-logo.webp" alt="Download my resume!"> Click/tap to download!
+                        </a>
+                    </div>
+                </section>
             </div>
-        </section>
-        <div class="divider"></div>
-        <!-- I Can Help You -->
-        <section>
-            <h2>I can help you.</h2>
+            <!-- Col 2 -->
             <div>
-                <div>
+                <!-- Details -->
+                <section>
+                    <h3 class="lined">Details</h3>
                     <p>
-                        I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
+                        My name is Laura Ukrainec and I'm currently based in Edmonton, Alberta. I'm an independent game programmer with a strong creative streak and a knack for solving puzzles. I've spent years working on my coding skills and learning the tricks of the trade,
+                        and I'm excited about a future of creativity and collaboration with people who share my passion for video games.
                     </p>
                     <p>
-                        I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.
+                        When it comes to games, my main goal is to create an entire experience with characters that people care about and environments so realistic that you feel you could step into them. Games are a form of art, and it takes passion and creativity to make these
+                        immersive worlds. My desire is to build games where the player FEELS like the hero of the story.
                     </p>
                     <p>
-                        If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
+                        Passion can only get you so far, however, so I keep an open mind and try to learn as much as possible. A piece of code rarely works on the first attempt, but I find that the process of searching for and fixing bugs is one of the best teachers, so I'm
+                        grateful for the opportunity to improve my skills. Though I'm perfectly capable of working alone, I prefer to be a part of a team where I can learn from the strengths of others.
                     </p>
-                </div>
-                <a class="flex btn" href="contact.html">Contact Me
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
-                </a>
+                    <p>
+                        I love coding, and I use C# to create modular assets that can be reused for other games. This includes scripts for health, weaponry, character creation, and UI menus. I have experience using the Monogame framework, but I make most of my games with Unity3D.
+                        I take great pride in making sure my games have a cohesive theme, so I've been known to spend hours creating my own 2D menus,textures, and sprites in Adobe Photoshop or GIMP.
+                    </p>
+                    <p>
+                        I received a formal education in Game Programming at the
+                        <a href="https://www.nait.ca/nait/home">Northern Alberta Institute of Technology</a>.
+                    </p>
+                </section>
+                <!-- Fun Facts -->
+                <section>
+                    <h3 class="lined">Fun Facts</h3>
+                    <ul>
+                        <li>My first complete game was Snake, programmed on my TI-84 calculator when I was 14.</li>
+                        <li>People most commonly describe me as "articulate" and "genuine".</li>
+                        <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangul.</li>
+                        <li>I love puzzles, including jigsaws, crosswords, cryptograms, and Sudoku.</li>
+                        <li>I made this entire website myself with HTML, SASS, and JavaScript.</li>
+                    </ul>
+                </section>
+                <!-- Back to Top -->
+                <div class="divider not-lg-screen"></div>
+                <section class="back-to-top">
+                    <a href="#">
+                        <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo"> Back to Top
+                    </a>
+                </section>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <div class="decoration"></div>
@@ -142,54 +188,6 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
-</body>
-
-</html> When it comes to games, my main goal is to create an entire experience with characters that people care about and environments so realistic that you feel you could step into them. Games are a form of art, and it takes passion and creativity to make these
-immersive worlds. My desire is to build games where the player FEELS like the hero of the story.
-</p>
-<p>
-    Passion can only get you so far, however, so I keep an open mind and try to learn as much as possible. A piece of code rarely works on the first attempt, but I find that the process of searching for and fixing bugs is one of the best teachers, so I'm
-    grateful for the opportunity to improve my skills. Though I'm perfectly capable of working alone, I prefer to be a part of a team where I can learn from the strengths of others.
-</p>
-<p>
-    I love coding, and I use C# to create modular assets that can be reused for other games. This includes scripts for health, weaponry, character creation, and UI menus. I have experience using the Monogame framework, but I make most of my games with Unity3D.
-    I take great pride in making sure my games have a cohesive theme, so I've been known to spend hours creating my own 2D menus,textures, and sprites in Adobe Photoshop or GIMP.
-</p>
-<p>
-    I received a formal education in Game Programming at the
-    <a href="https://www.nait.ca/nait/home">Northern Alberta Institute of Technology</a>.
-</p>
-</section>
-<div class="divider"></div>
-<!-- Fun Facts -->
-<section>
-    <h3>Fun Facts</h3>
-    <ul>
-        <li>My first complete game was Snake, programmed on my TI-84 calculator when I was 14.</li>
-        <li>People most commonly describe me as "articulate" and "genuine".</li>
-        <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangul.</li>
-        <li>I love puzzles, including jigsaws, crosswords, cryptograms, and Sudoku.</li>
-        <li>I made this whole website myself with HTML, SASS, and JavaScript.</li>
-    </ul>
-</section>
-<!-- Back to Top -->
-<section class="back-to-top">
-    <a href="#">
-        <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo"> Back to Top
-    </a>
-</section>
-</div>
-</div>
-</main>
-<footer>
-    <div class="decoration"></div>
-    <div class="container">
-        <p>Copyright &copy;2021, Laura Ukrainec.
-            <span>All rights reserved.</span>
-        </p>
-    </div>
-</footer>
-<script src="js/main.js"></script>
 </body>
 
 </html>
