--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.
                     </p>
                 </div>
-                <a class="flex btn" href="about.html">Learn More
+                <a class="flex btn" href="about.html">About
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
@@ -125,7 +125,7 @@
                         If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
                     </p>
                 </div>
-                <a class="flex btn" href="contact.html">Contact Me
+                <a class="flex btn" href="contact.html">Contact
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
