--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
                     </p>
                     <p>
-                        I also dabble in website design/building and SQL. <strike>I'm currently learning C++ in my spare time.</strike> I'm taking a break to further develop my website building skills by learning PHP. Don't worry, I full intend to return
-                        to C++ because I love programming and want to learn as much as I can about it.
+                        I also dabble in website design/building and SQL. <strike>I'm currently learning C++ in my spare time.</strike> I'm taking a break to further develop my website building skills by learning PHP. Don't worry, I fully intend to return
+                        to C++. I love programming and want to learn as much as I can about it.
                     </p>
                 </div>
                 <a class="flex btn" href="portfolio.html">Portfolio
