--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@
             <div>
                 <div>
                     <p>
-                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
+                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound. I dabble in website design/building with pure HTML/CSS/JS and ASP.net. Other languages include SQL and PHP.
                     </p>
                     <p>
                         I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
                     </p>
                     <p>
-                        I also dabble in website design/building and SQL. <strike>I'm currently learning C++ in my spare time.</strike> I'm taking a break to further develop my website building skills by learning PHP. Don't worry, I fully intend to return
-                        to C++. I love programming and want to learn as much as I can about it.
+                        Though I started with Unity and C#, I also have experience with Unreal Engine, blueprints, and C++. 
                     </p>
                 </div>
                 <a class="flex btn" href="portfolio.html">Portfolio
