--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                     <ul>
                         <li>My first complete game was Snake, programmed on my TI-84 calculator when I was 14.</li>
                         <li>People most commonly describe me as "articulate" and "genuine".</li>
-                        <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangul.</li>
+                        <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangeul.</li>
                         <li>I love puzzles, including jigsaws, crosswords, cryptograms, and Sudoku.</li>
                         <li>I made this entire website myself with HTML, SASS, and JavaScript.</li>
                     </ul>
